fix: improve outline for higher contrasts mode (#430)
* feat(message): add liveOnEnter option

fix #422

* Outline Change

---------

--- a/style/auto-complete.scss
+++ b/style/auto-complete.scss
@@ -12,7 +12,7 @@
     background-color: transparent;
     border: 0;
     border-radius: get-css-var('input-radius');
-    outline: 0;
+    outline-color: transparent;
 
     &::placeholder {
       color: get-css-var('input-placeholder-color');
