--- a/style/tab-nav.scss
+++ b/style/tab-nav.scss
@@ -42,7 +42,7 @@ $tab-nav: map.merge(
   display: flex;
   align-items: stretch;
   background-color: transparent;
-  outline: 0;
+  outline-color: transparent;
 
   &--right,
   &--left {
@@ -134,7 +134,7 @@ $tab-nav: map.merge(
     cursor: pointer;
     user-select: none;
     border: 0 solid get-css-var('tab-nav-d-color');
-    outline: 0;
+    outline-color: transparent;
     transition: get-css-var('transition-color');
 
     &:hover,
@@ -207,7 +207,7 @@ $tab-nav: map.merge(
     user-select: none;
     background-color: transparent;
     border: 0 solid get-css-var('tab-nav-d-color');
-    outline: 0;
+    outline-color: transparent;
     transition: get-css-var('transition-color');
 
     &:hover,
@@ -420,7 +420,7 @@ $tab-nav: map.merge(
     background-color: transparent;
     border: 0;
     border-radius: 50%;
-    outline: 0;
+    outline-color: transparent;
     transition: get-css-var('transition-background');
 
     &:hover,
